# secrets-usage

./: .gitignore  LICENSE  README.md
ciphertext/: README.md
ciphertext/app/: config.py
ciphertext/config/: envfile.enc
database/: Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
database/app/business_logic/: errors.py
database/app/business_logic/dto/: secrets.py
database/app/business_logic/services/: secrets_service.py
database/app/data_access/persistence/: secrets_gateway.py  tables.py  uow.py
database/app/data_access/persistence/migrations/: env.py
database/app/data_access/persistence/migrations/versions/: 0fb92f143e6e_.py
database/app/main/: config.py  di.py
database/app/presentation/: errors.py
database/app/presentation/api/: controllers.py  exception_handlers.py  wsgi.py
key-vault-demo/: pyproject.toml
key-vault-demo/app/: config.py  sample.py  vault.py
plaintext/: README.md  pyproject.toml
plaintext/config/: .envfile
