[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Murad Akhundov"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
falcon = "^3.1.1"
pytest = "^7.4.2"
sqlalchemy = "^2.0.22"
alembic = "^1.12.0"
rodi = "^2.0.3"
pycryptodome = "^3.19.0"
dataclass-factory = "^2.16"
psycopg2-binary = "^2.9.9"
gunicorn = "^21.2.0"
isort = "^5.12.0"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
