[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Murad Akhundov <akhundov1murad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
azure-identity = "^1.15.0"
azure-keyvault-secrets = "^4.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
